--- a/.dockerignore
+++ b/.dockerignore
@@ -1,17 +1,5 @@
-Dockerfile
-.dockerignore
+node_modules
 .git
 .gitignore
-.gitattributes
-README.md
-.npmrc
-.prettierrc
-.eslintrc.cjs
-.graphqlrc
-.editorconfig
-.svelte-kit
-.vscode
-node_modules
-build
-package
-**/.env
+*.md
+dist
